# fia_stock_signal

./: .env.example  .gitignore  README.md  netlify.toml  pyproject.toml
.github/workflows/: nightly.yml
data/: last_run.json
data/backtest/: results.json
data/parquet/: events.parquet  macro.parquet  news.parquet  picks.parquet  scores.parquet  universe.parquet  xbrl_facts.parquet
data/site/: index.html
src/stock_signals/: __init__.py  backfill.py  backtest.py  config.py  db.py  factors.py  fundamentals.py  persist.py  pipeline.py  sentiment.py  sitegen.py  smoke.py  universe.py
src/stock_signals/ingest/: __init__.py  base.py  bluesky.py  edgar.py  finnhub.py  fmp.py  fred.py  news_rss.py  reddit_src.py  tiingo.py  twelvedata.py
tests/: conftest.py  test_backtest.py  test_db.py  test_factors.py  test_fundamentals.py  test_persist.py  test_sentiment.py  test_sitegen.py  test_social_sources.py  test_sources.py  test_universe.py
